[tool.poetry]
name = "subtr-actor-py-spec"
version = "0.0.4"
description = "Python bindings for the Rocket League replay processing library subtr-actor."
authors = ["Ivan Malison <ivanmalison@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nilsabdi/subtr-actor-py-spec"
packages = [{include = "subtr_actor_spec", from="subtr_actor_spec"}]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"

[tool.poetry.dev-dependencies]
wheel = "*"
maturin = "^0.14.2"
pytest = "*"

[tool.maturin]
features = ["pyo3/extension-module"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"